# torch-points3d

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  brouillon.py  config.yaml  eval.py  find_env.py  find_neighbour_dist.py  knn_debug.p  knn_debug.py  kp_train.py  lightning_train.py  mkdocs.yml  modules.py  mypy.ini  pyproject.toml  reathedocs.yml  requirements.txt  setup.py  test.pt  test.py  train.py  visualizer.py
.devcontainer/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  devcontainer.json  setup.sh
.github/workflows/: codeql-analysis.yml  deploy.yaml  deploydoc.yml  docker_push.yaml  pypi_publish.yaml  pythonapp.yml
benchmark/SpatioTemporalSegmentation/: RSCNN_MSN.md  Res16UNet34C  scannet2cmRes16UNet34C.txt  scannet5cmRes16UNet34C.txt
benchmark/original_architectures/: RSCNN_MSN.md
benchmark/s3dis_fold5/: Pointnet2_original.md  RSConv_2LD.md
benchmark/shapenet/: pointnet2_charlesmsg.md  pointnet2_original.md  rscnn_original.md
conf/: config.yaml  eval.yaml  sota.yaml  training.yaml
conf/data/: default.yaml
conf/dataset/: shapenet.yaml
conf/debugging/: default.yaml  early_break.yaml  find_neighbour_dist.yaml
conf/hydra/: custom.yaml
conf/lr_scheduler/: cosine.yaml  cyclic.yaml  exponential.yaml  multi_step.yaml  multi_step_reg.yaml  plateau.yaml  poly_lr.yaml  step.yaml
conf/models/: default.yaml  segmentation.yaml
conf/scheduler/: cosine.yaml  lambda_rule.yaml  plateau.yaml
conf/task/: classification.yaml  default.yaml  object_detection.yaml  panoptic.yaml  registration.yaml  segmentation.yaml
conf/trainer/: debug.yaml  default.yaml
conf/training/: default.yaml  default_reg.yaml  dgcn.yaml  kpconv.yaml  kpconv_reg.yaml  minkowski_scannet.yaml  pointgroup.yaml  ppnet.yaml  pvcnn.yaml  sparse_fragment_reg.yaml  sparse_fragment_reg_finetune.yaml  spvcnn.yaml  votenet.yaml
conf/visualization/: default.yaml  eval.yaml  gan.yaml  train.yaml
dashboard/: ObjectClassificationRSConv.ipynb  dashboard.ipynb  scannet_explorer.ipynb  scannet_object_explorer.ipynb
dashboard/notebooks_html/: dashboard_notebook.html
dashboard/py_scripts/: dashboard_notebook.py
datasets/: base_dataset.py  batch.py  indoor_dataset.py  modelnet_dataset.py  s3dis1x1_dataset.py  s3dis_dataset.py  shapenet_dataset.py  transforms.py  utils.py
datasets/ply_c/: CMakeLists.txt  FindNumPy.cmake  connected_components.cpp  ply_c.cpp  random_subgraph.cpp
datasets/urls/: url_analysis-by-synthesis.txt  url_rgbd-scenes-v2.txt
deeppointcloud_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dev_stuff/: update_wandb_model.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.train  build.sh  install_python.sh  install_system.sh
docs/: Makefile  conf.py  index.md  index.rst  mkdocs.yml  requirements.txt
docs/how_to_do/: how_to_do.md
docs/logo_gen/: Pytorch.3dm  pytorch_logo.gh
docs/src/: advanced.rst  conv_type.md  datasets.md  gettingstarted.rst  installation.md  logging.md  models.md  modules.md  tutorials.rst
docs_old/: index.md  index.rst  requirements.txt
docs_old/css/: custom.css
docs_old/src/: core.md  (+1 more)
examples/: kpconv_classification_forward.py  kpconv_segmentation_forward.py  pointnet2.py  pointnet2_classification_forward.py  pointnet2_segmentation_forward.py  pointnet_segmentation_forward.py  utils.py
forward_scripts/: forward.py  forward_partseg.py
metrics/: base_tracker.py  colored_tqdm.py  confusion_matrix.py  confusionmatrix.py  hierachical_segmentation_tracker.py  hierarchical_segmentation_tracker.py  metrics_tracker.py  metricstracker.py  model_checkpoint.py  regression_tracker.py  segmentation_tracker.py  shapenet_part_tracker.py
models/: base_model.py  base_modules.py  core_modules.py  core_sampling_and_search.py  core_transforms.py  dense_modules.py  losses.py  partial_dense_modules.py  unet_base.py  unwrapped_unet_base.py  utils.py
motebooks/: ObjectClassificationRSConv.ipynb  measurement_exploration.ipynb
notebooks/: ObjectClassificationRSConv.ipynb  PartSegmentationKPConv.ipynb  PartSegmentationPointNet2.ipynb  dashboard.ipynb  demo_registration_3dm.ipynb  demo_registration_kitti.ipynb  objectregistration.ipynb  pointgroup_debug.ipynb  s3dis_explorer.ipynb  scannet_explorer.ipynb  scannet_object_explorer.ipynb  scannet_panoptic.ipynb  semanticKitti.ipynb  sum.ipynb  votenet_debug.ipynb
schedulers/: lr_schedulers.py
scripts/: cv_s3dis.py  easy_install.sh  find_env.py  find_runs.py  omegaconf2dict.py  switch_cuda.sh
site/: 404.html  index.html  search.html  sitemap.xml
src/: __init__.py
test/: __init__.py  mock_models.py  mockdatasets.py  test_activate_dropout.py  test_api.py  test_base_dataset.py  test_basedataset.py  test_basemodel.py  test_batch.py  test_bn_scheduler.py  test_boxstuff.py  test_confusionMatrix.py  test_create_kpconv.py  test_create_model.py  test_dataloader_list.py  test_dataset.py  test_dataset_factory.py  test_datasets.py  test_filter.py  test_flops.py  test_forwarddataset.py  test_fps.py  test_grid_sampling.py  test_gsdn.py  test_hierarchical_segmentationtracker.py  test_ind_tracker.py  test_interpolateop.py  test_kpconv.py  test_kpconv_losses.py  test_lightning_classification_tracker.py  test_lightning_confusion_matrix.py  test_lightning_segmentation_tracker.py  test_losses.py  test_lr_scheduler.py  test_make_pair.py  test_model_checkpoint.py  test_models.py  test_modules.py  test_msdata.py  test_msdatapair.py  (+26 more)
test_registration_scripts/: descriptor_matcher.py  save_feature.py
torch_points3d/: trainer.py
utils/: enums.py  timer.py  utils.py
utils_folder/: colors.py  enums.py  running_stats.py  utils.py
(+762 files in other folders)
