[tool.poetry]
name = "deeppointcloud_benchmark"
version = "0.1.0"
description = ""
authors = ["Nicolas <nicolas.chaulet@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
torch-geometric = "==1.3.2"
matplotlib = "^3.1"
hydra-core = "^0.11.2"
wandb = "^0.8.18"
tqdm = "^4.40"
torchnet = "^0.0.4"
tensorboard = "^2.1"
mkdocs = "^1.0"
torch = "1.3.1"
etw-pytorch-utils = {git = "https://github.com/erikwijmans/etw_pytorch_utils.git"}
torch-points = {git = "https://github.com/nicolas-chaulet/torch-points.git", rev = "v0.4.1"}
torch-scatter = "^1.4.0"
torch-sparse = "==0.4.3"
torch-cluster = "^1.4.5"
numba = "^0.48.0"
pytorch_metric_learning = "^0.9.75"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
flake8 = "^3.7"
rope = "^0.14.0"
pre-commit = "^1.21.0"
black = "^19.10b0"
jupyterlab = "^1.2.6"
pyvista = "^0.23.1"
panel = "^0.8.0"
param = "^1.9.3"
codecov = "^2.0.16"
mkautodoc = "^0.1.0"

[tool.black]
line-length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
