[tool.poetry]
name = "torch_points3d"
version = "0.1.0"
description = ""
authors = ["Thomas Chaton <thomas.chaton.ai@gmail.com>", "Nicolas Chaulet <nicolas.chaulet@gmail.com>"]
packages = [
    { include = "torch_points3d" },
]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1"
hydra-core = "^0.11.2"
wandb = "^0.8.18"
tqdm = "^4.40"
torchnet = "^0.0.4"
tensorboard = "^2.1"
torch = "1.3.1"
torch-scatter = "==1.4.0"
torch-sparse = "==0.4.3"
torch-cluster = "==1.4.5"
torch-geometric = "==1.3.2"
pytorch_metric_learning = "^0.9.75"
sphinx_rtd_theme = "^0.4.3"
MinkowskiEngine = {version = "^0.4.2", optional = true}
torch-points-kernels = "^0.5.2"
numpy = "^1.18.2"
scikit-image = "^0.16.2"
pycuda = "^2019.1.2"
numba = "^0.49.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
flake8 = "^3.7"
rope = "^0.14.0"
pre-commit = "^1.21.0"
black = "^19.10b0"
jupyterlab = "^1.2.6"
pyvista = "^0.23.1"
panel = "^0.8.0"
param = "^1.9.3"
codecov = "^2.0.16"
sphinx = "^2.4.4"
sphinx-autobuild = "^0.7.1"
gpustat = "^0.6.0"
snakeviz = "^2.0.1"

[tool.poetry.extras]
MinkowskiEngine = ["MinkowskiEngine"]

[tool.black]
line-length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
