[tool.poetry]
name = "torch_points3d"
version = "0.2.0" # This will be overriden by the CI at publish time
description = "Point Cloud Deep Learning Extension Library for PyTorch"
authors = ["Thomas Chaton <thomas.chaton.ai@gmail.com>", "Nicolas Chaulet <nicolas.chaulet@gmail.com>"]
packages = [
    {include = "torch_points3d"},
]
readme = "README.md"
documentation = "https://torch-points3d.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"
hydra-core = "~1.0.0"
wandb = "^0.8.18"
tqdm = "^4.40"
open3d = "0.12.0"
torchnet = "^0.0.4"
tensorboard = "^2.1"
torch = "^1.7.0"
torch-scatter = "^2.0.0"
torch-sparse = "^0.6.10"
torch-cluster = "^1.5.6"
torch-geometric = "^1.7.1"
pytorch_metric_learning = "^0.9.87.dev0"
torch-points-kernels = "^0.7.0"
numpy = "<1.20.0"
scikit-image = "^0.16.2"
numba = "^0.50.0"
plyfile = "^0.7.2"
gdown = "^3.12.0"
types-six = "^0.1.6"
types-requests = "^0.1.11"
h5py = "^3.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
flake8 = "^3.7"
rope = "^0.14.0"
pre-commit = "^1.21.0"
black = "^19.10b0"
jupyterlab = "^1.2.6"
pyvista = "^0.23.1"
panel = "^0.8.0"
param = "^1.9.3"
codecov = "^2.0.16"
gpustat = "^0.6.0"
snakeviz = "^2.0.1"
sphinx_rtd_theme = "^0.4.3"
sphinx = "^2.4.4"
sphinx-autobuild = "^0.7.1"
mypy = "^0.770"
ipywidgets = "^7.5.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
